zmiana sout na logger